<resources>
    <string name="app_name">EventusGest</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Entrar</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="credenciais">Credenciais</string>
    <string name="movimentos">Movimentos</string>
    <string name="imagem_credencial_desc">Imagem Credencial</string>
    <string name="nao">Não</string>
    <string name="informacoes">Informações</string>
    <string name="sem_informacoes">Sem informações</string>
    <string name="marcar_credencial">Marcar Credencial</string>
    <string name="ucid">UCID</string>
    <string name="noInternet">Sem internet</string>
    <string name="invalid_login">Username ou password errados.</string>
    <string name="eventusgest">EventusGest</string>
    <string name="usename_invalido">Username Invalido</string>
    <string name="password_invalida">Password Invalida</string>
    <string name="ponto_de_acesso">Ponto de Acesso</string>
    <string name="evento_atual">Evento Atual</string>
    <string name="op_es_do_utilizador">Opções do Utilizador</string>
    <string name="op_es_de_desenvolvedor">Opções de Desenvolvedor</string>
    <string name="pesquisar_credencial">Pesquisar credencial</string>
    <string name="delete">Delete</string>
    <string name="remover">Remover</string>
    <string name="guardar">Guardar</string>
    <string name="confirmar">Confirmar</string>
    <string name="cancelar">Cancelar</string>
    <string name="criar_movimento">Criar Movimento</string>
    <string name="movimento_impossivel">Movimento Impossivel</string>
    <string name="sem_acceso_area">Sem acesso á area</string>
    <string name="channel_name">EventusGest</string>
    <string name="channel_description">EventusGest Mqtt</string>
</resources>