<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".createMovementActivity">

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/ucidInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:layout_weight="2"
            android:ems="10"
            android:hint="@string/ucid"
            android:inputType="textPersonName"
            android:importantForAutofill="no" />

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btnSearchCred"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_marginEnd="15dp"
            android:layout_marginTop="15dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corners"
            app:srcCompat="@drawable/ic_search" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/box_info"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="15dp"
        tools:targetApi="lollipop">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="15dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/credImage"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:contentDescription="@string/imagem_credencial_desc"
                app:srcCompat="@drawable/qrcode" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="15dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tvUCID"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:scrollHorizontally="true"
                    android:text="Carrier Name ou UCID"
                    android:textColor="#000000"
                    android:textSize="25sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/tvCarrierType"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Tipo de carregador"
                    android:textColor="#000000"
                    android:textSize="15sp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="5dp"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewFlag"
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:scaleType="centerInside"
                            app:srcCompat="@drawable/ic_flag_24px" />

                        <TextView
                            android:id="@+id/tvFlag"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="2dp"
                            android:gravity="center_vertical"
                            android:text="0"
                            android:textColor="#000000"
                            android:textSize="15sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageViewBlock"
                            android:layout_width="30dp"
                            android:layout_height="match_parent"
                            android:scaleType="centerInside"
                            app:srcCompat="@drawable/ic_user_lock" />

                        <TextView
                            android:id="@+id/tvBlock"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginStart="2dp"
                            android:gravity="center_vertical"
                            android:text="@string/nao"
                            android:textColor="#000000"
                            android:textSize="15sp" />
                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tvEntityName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Nome da entidade"
            android:textColor="#000000"
            android:textSize="25sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvEntityType"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Tipo de entidade"
            android:textColor="#000000"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/tvInfoTitulo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/informacoes"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sem_informacoes"
            android:textColor="#000000"
            android:textSize="15sp" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="15dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvAreaFrom"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_vertical|end"
            android:text="..."
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/imageViewArrow"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:scaleType="centerInside"
            app:srcCompat="@drawable/ic_baseline_arrow_forward_24" />

        <TextView
            android:id="@+id/tvAreaTo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="start|center_vertical"
            android:text="..."
            android:textSize="18sp"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/alertLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="@drawable/alert"
        android:padding="15dp">

        <ImageView
            android:id="@+id/alertIcon"
            android:layout_width="25dp"
            android:layout_height="match_parent"
            android:layout_weight="0"
            app:srcCompat="@drawable/ic_baseline_error_24" />

        <TextView
            android:id="@+id/tvAlert"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="15dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="Movimento Impossivel"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btn_movement"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:background="@drawable/rounded_corners"
        android:text="Criar Movimento"
        android:textSize="20sp" />

    <Button
        android:id="@+id/btn_flag"
        style="@style/Widget.AppCompat.Button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:layout_marginEnd="55dp"
        android:layout_marginStart="55dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/marcar_credencial"
        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
        android:textSize="18sp" />

</LinearLayout>